# reproducility-transql_plus

./: LICENSE  README.md  pyproject.toml  reproduction_note.md  requirements.txt
preprocessing/: extract_weights.py  load_weights_clickhouse.py  load_weights_duckdb.py  preprocess_weights.py
prompts/: prompt_25.json
results/: bench_d11_overhead.json  clickhouse_decode.json  clickhouse_decode_smoke.json  clickhouse_prefill.json  clickhouse_prefill_smoke.json  clickhouse_sql_probe.json  combined_results.json  decode.json  deepspeed_bf16_cold.json  deepspeed_bf16_warm.json  llamacpp_f32_cold.json  llamacpp_f32_ppl.txt  llamacpp_f32_warm.json  prefill.json
scripts/: bench_d11_overhead.py  bench_pivot_cache.py  collect_results.py  demo_softmax_overflow.py  probe_clickhouse_sql.py  run_clickhouse_decode.py  run_clickhouse_perplexity.py  run_clickhouse_prefill.py  run_decode.py  run_deepspeed.py  run_perplexity.py  run_prefill.py  sample_prompts.py  test_checkpoint_compression.py  test_storage_info.py  tune_pivot.py  tune_pivot_clickhouse.py
tests/: conftest.py  test_postopt.py  test_preprocessing.py  test_runner.py  test_single_layer.py  test_sql_templates.py
transql_plus/: compute_dag.py  config.py  dag_to_sql.py  postopt.py  runner.py  sql_templates.py
transql_plus/clickhouse/: __init__.py  postopt_ch.py  runner_ch.py  sql_templates_ch.py
